Fix issue with next button display on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ input[type=email] {
     box-sizing: border-box;
 }
 
-button {
+.submitBtn {
     width: 20%;
     padding: 5px 10px;
     margin: 5px 0;
